--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <section>
         <div style="text-align: center;">
-            <img class="profile-pic" src="https://w7.pngwing.com/pngs/178/595/png-transparent-user-profile-computer-icons-login-user-avatars-thumbnail.png" alt="Foto de perfil">
+            <img class="profile-pic" src="yO.png" alt="Foto de perfil">
         </div>
     </section>
 
@@ -83,15 +83,15 @@
         <div class="info">
             <div>
                 <h3>Nombre</h3>
-                <p>Tu Nombre</p>
+                <p>Aleks III Antonio II Coronado Sazo</p>
             </div>
             <div>
                 <h3>Correo Electrónico</h3>
-                <p>tucorreo@gmail.com</p>
+                <p>Aleks.coronado@ehiglobal.com</p>
             </div>
             <div>
                 <h3>Teléfono</h3>
-                <p>(123) 456-7890</p>
+                <p>+502 2217 2104</p>
             </div>
         </div>
     </section>
@@ -99,20 +99,20 @@
     <section>
         <h2>Experiencia Laboral</h2>
         <div>
-            <h3>Desarrollador Web</h3>
-            <p>Empresa ABC - Ciudad, País | Fecha de inicio - Fecha de fin</p>
+            <h3>Encargado de rentas y servicio al cliente</h3>
+            <p>Grupo ANC - Ciudad de Guatemala, Guatemala | Fecha de inicio: 15/02/2024 - Actual</p>
             <ul>
-                <li>Logros y responsabilidades...</li>
-                <li>Más logros y responsabilidades...</li>
+                <li>Aumento en la cantidad de reservas</li>
+                <li>Atender y apoyar por todos los medios a potenciales clientes en busca de una reserva o apoyo</li>
             </ul>
         </div>
 
         <div>
-            <h3>Otro Trabajo</h3>
-            <p>Otra Empresa - Ciudad, País | Fecha de inicio - Fecha de fin</p>
+            <h3>Instructor de Idiomas</h3>
+            <p>Academia Europea - Ciudad de Guatemala, Guatemala | Fecha de inicio: 15/12/2023 - Actual</p>
             <ul>
-                <li>Logros y responsabilidades...</li>
-                <li>Más logros y responsabilidades...</li>
+                <li>Logrando que los alumnos aprendan más y más rápido</li>
+                <li>Guiar e instruir en el aprendizaje de idiomas</li>
             </ul>
         </div>
     </section>
@@ -121,8 +121,8 @@
         <h2>Educación</h2>
         <div>
             <h3>Grado Universitario</h3>
-            <p>Nombre de la Universidad - Ciudad, País | Fecha de inicio - Fecha de fin</p>
-            <p>Título obtenido y especialización (si aplica)</p>
+            <p>Galileo - Ciudad de Guatemala, Guatemala | Fecha de inicio: 02/01/2024 - Fecha de fin: 12/2025</p>
+            <p>Técnico Universitario en Desarrollo de Software con especialidad en Front End</p>
         </div>
     </section>
 </body>
