--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #ff9d9d;
         }
 
         header {
@@ -24,13 +24,13 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: white;
+            background-color: rgb(253, 72, 72);
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         h1, h2 {
-            color: #333;
+            color: #ff0000;
         }
 
         .info {
