--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mi Currículum</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Times New Roman', Times, serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
@@ -14,8 +14,8 @@
         }
 
         header {
-            background-color: #333;
-            color: white;
+            background-color: #290303;
+            color: rgb(255, 183, 183);
             text-align: center;
             padding: 1em 0;
         }
@@ -24,13 +24,13 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: rgb(253, 72, 72);
+            background-color: rgb(197, 16, 16);
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         h1, h2 {
-            color: #ff0000;
+            color: #d64c4c;
         }
 
         .info {
