--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #ff9d9d;
+            background-color: #ffffff;
         }
 
         header {
             background-color: #290303;
-            color: rgb(255, 183, 183);
+            color: rgb(41, 0, 0);
             text-align: center;
             padding: 1em 0;
         }
@@ -43,7 +43,7 @@
             flex: 1;
             padding: 10px;
             margin: 0 5px;
-            background-color: #f0f0f0;
+            background-color: #000000;
             border-radius: 6px;
         }
 
