--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #ffffff;
+            background-color: #000000;
         }
 
         header {
-            background-color: #290303;
+            background-color: #460a0a;
             color: rgb(41, 0, 0);
             text-align: center;
             padding: 1em 0;
@@ -30,7 +30,7 @@
         }
 
         h1, h2 {
-            color: #d64c4c;
+            color: #a31e1e;
         }
 
         .info {
@@ -43,7 +43,7 @@
             flex: 1;
             padding: 10px;
             margin: 0 5px;
-            background-color: #000000;
+            background-color: #ffffff;
             border-radius: 6px;
         }
 
