deberia ser el ultimo commit
ya

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
 
         h1, h2 {
-            color: #a31e1e;
+            color: #ffffff;
         }
 
         .info {
@@ -43,7 +43,7 @@
             flex: 1;
             padding: 10px;
             margin: 0 5px;
-            background-color: #ffffff;
+            background-color: #aaaaaa;
             border-radius: 6px;
         }
 
